# rust-project-template

./: Cargo.toml  README.md
.devcontainer/: devcontainer.json  startup.sh
